--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 </p>
             </div>
             <div class="mid-content mt_48">
-                <div class="select-building flex pt_pbt_21 bd_top_bt">
+                <div class="select-building flex pt_pbt_21 bd_top_bt fs_16">
                     <img src="./image/icon-tower 1.png" alt="img" class="mr_24">
-                    <u class="fs_16 mr_36 fw_700">Tòa nhà A1</u>
+                    <u class="mr_36 fw_700">Tòa nhà A1</u>
                     <div class="separation mr_36 fw_400"></div>
-                    <p class="fs_16 mr_36 fw_400">Tòa nhà A2</p>
+                    <p class="mr_36 fw_400">Tòa nhà A2</p>
                     <div class="separation mr_36"></div>     
-                    <p class="fs_16 mr_36 fw_400">Tòa nhà A3</p>
+                    <p class="mr_36 fw_400">Tòa nhà A3</p>
                 </div>
                 <div class="main-content flex mt_36">
                     <img src="./image/tower.jpg" alt="img" class="the-tower bd_radius_8">
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="footer mt_36 flex">
-                <img src="./image/Rectangle.png" alt="img">
+                <img src="./image/Rectangle.png" alt="img" class="image">
                 <div class="content-footer flex fs_16">
                     <div class="contact flex mr_24">
                         <img src="./image/Rectangle (2).png" alt="img" class="size_icon mr_12">
