--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Arial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="tablet.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
     <div class="container">
@@ -15,25 +17,25 @@
                 <p class="title fw_700">
                     Dự án Vinhomes Smart City
                 </p>
-                <p class="desc mt_36 fs_16 fw_700">
+                <p class="desc mt_36 fs_16 fw_700 fs_12 mt_mb_24">
                     Chủ đầu tư: Vinhomes
                 </p>
-                <p class="desc mt_24 fs_16 fw_700">
+                <p class="desc mt_24 fs_16 fw_700 fs_12">
                     Địa chỉ: Tây Mỗ, Nam Từ Liêm, Hà Nội
                 </p>
             </div>
-            <div class="mid-content mt_48">
-                <div class="select-building flex pt_pbt_21 bd_top_bt fs_16">
-                    <img src="./image/icon-tower 1.png" alt="img" class="mr_24">
-                    <u class="mr_36 fw_700">Tòa nhà A1</u>
-                    <div class="separation mr_36 fw_400"></div>
-                    <p class="mr_36 fw_400">Tòa nhà A2</p>
-                    <div class="separation mr_36"></div>     
-                    <p class="mr_36 fw_400">Tòa nhà A3</p>
+            <div class="mid-content mt_48 mt_tl_36 mt_mb_24">
+                <div class="select-building flex bd_top_bt fs_16 fs_12"> 
+                    <img src="./image/icon-tower 1.png" alt="img" class="icon-tower mr_24">
+                    <u class="mr_36 fw_700 mr_mb_24">Tòa nhà A1</u>
+                    <div class="separation mr_36 fw_400 mr_mb_24"></div>
+                    <p class="mr_36 mr_mb_24">Tòa nhà A2</p>
+                    <div class="separation mr_36 mr_mb_24"></div>     
+                    <p class="">Tòa nhà A3</p>
                 </div>
-                <div class="main-content flex mt_36">
+                <div class="main-content flex mt_48 mt_tl_36 mt_mb_24">
                     <img src="./image/tower.jpg" alt="img" class="the-tower bd_radius_8">
-                    <div class="main-right">
+                    <div class="main-right hidden_mb">
                         <img src="./image/Group 94.png" alt="img" class="next">
                         <div class="select-floor flex bd_top_bt mt_18">
                             <div class="floor floor1">
@@ -104,15 +106,39 @@
                         </div>
                     </div>
                 </div>
+                <div class="sup-main-mb flex mt_mb_24 ">
+                    <img src="./image/Group 64.png" alt="img" class="sup-next mr_mb_12">
+                    <div class="sup-select-floor flex pt_pb_mb_12 bd_top_bt mr_mb_12">
+                        <div class="floor floor1">
+                            1
+                        </div>
+                        <div class="floor floor2">
+                            2
+                        </div>
+                        <div class="floor floor3">
+                            3
+                        </div>
+                        <div class="floor floor4">
+                            4
+                        </div>
+                        <div class="floor floor5">
+                            5
+                        </div>
+                    </div>
+                    <img src="./image/Group 65.png" alt="img" class="sup-next">
+                    <div class="title-select fs_12 fw_700">
+                        Chọn tầng
+                    </div>
+                </div>
             </div>
-            <div class="footer mt_36 flex">
+            <div class="footer mt_36 flex mt_mb_24">
                 <img src="./image/Rectangle.png" alt="img" class="image">
-                <div class="content-footer flex fs_16">
-                    <div class="contact flex mr_24">
+                <div class="content-footer flex fs_16 mt_mb_12">
+                    <div class="contact flex mr_24 mr_mb_36">
                         <img src="./image/Rectangle (2).png" alt="img" class="size_icon mr_12">
                         <p>Liên hệ</p>
                     </div>
-                    <div class="share flex mr_24">
+                    <div class="share flex mr_24 mr_mb_36">
                         <img src="./image/Rectangle (3).png" alt="img" class="size_icon mr_12">
                         <p>Chia sẻ</p>
                     </div>
