--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
 <body>
     <div class="container">
         <div class="container-left">
-            <div class="top-content">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
-                <p class="title fw_700">
+            <div class="top-content fw_700">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
+                <p class="title">
                     Dự án Vinhomes Smart City
                 </p>
-                <p class="desc mt_36 fs_16 fw_700 fs_12 mt_mb_24">
+                <p class="desc mt_36 fs_16 fs_mb_12 mt_mb_24">
                     Chủ đầu tư: Vinhomes
                 </p>
-                <p class="desc mt_24 fs_16 fw_700 fs_12">
+                <p class="desc mt_24 fs_16 fs_mb_12">
                     Địa chỉ: Tây Mỗ, Nam Từ Liêm, Hà Nội
                 </p>
             </div>
             <div class="mid-content mt_48 mt_tl_36 mt_mb_24">
-                <div class="select-building flex bd_top_bt fs_16 fs_12"> 
+                <div class="select-building flex bd_top_bt fs_16 fs_mb_12"> 
                     <img src="./image/icon-tower 1.png" alt="img" class="icon-tower mr_24">
                     <u class="mr_36 fw_700 mr_mb_24">Tòa nhà A1</u>
-                    <div class="separation mr_36 fw_400 mr_mb_24"></div>
+                    <div class="separation mr_36 mr_mb_24"></div>
                     <p class="mr_36 mr_mb_24">Tòa nhà A2</p>
                     <div class="separation mr_36 mr_mb_24"></div>     
                     <p class="">Tòa nhà A3</p>
                 </div>
                 <div class="main-content flex mt_48 mt_tl_36 mt_mb_24">
                     <img src="./image/tower.jpg" alt="img" class="the-tower bd_radius_8">
-                    <div class="main-right hidden_mb">
+                    <div class="main-right">
                         <img src="./image/Group 94.png" alt="img" class="next">
                         <div class="select-floor flex bd_top_bt mt_18">
                             <div class="floor floor1">
@@ -126,14 +126,14 @@
                         </div>
                     </div>
                     <img src="./image/Group 65.png" alt="img" class="sup-next">
-                    <div class="title-select fs_12 fw_700">
+                    <div class="title-select fs_mb_12 fw_700">
                         Chọn tầng
                     </div>
                 </div>
             </div>
             <div class="footer mt_36 flex mt_mb_24">
                 <img src="./image/Rectangle.png" alt="img" class="image">
-                <div class="content-footer flex fs_16 mt_mb_12">
+                <div class="content-footer flex fs_16 mt_mb_12 fs_mb_12">
                     <div class="contact flex mr_24 mr_mb_36">
                         <img src="./image/Rectangle (2).png" alt="img" class="size_icon mr_12">
                         <p>Liên hệ</p>
